--- a/Cycles_detection.ipynb
+++ b/Cycles_detection.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9ba259c6",
    "metadata": {},
    "outputs": [
@@ -102,14 +102,14 @@
     }
    ],
    "source": [
-    "from cycles_detection import time_respecting_cycles\n",
+    "from cycles_detection import temporal_cycles\n",
     "\n",
     "MAX_DURATION = 36e5 * 24 ## 1 day\n",
     "MAX_LENGTH = 25 \n",
     "\n",
     "s = time.time()\n",
     "\n",
-    "cycles = list(time_respecting_cycles(rolling_g=g,max_length=100,max_duration=36e5 * 24))\n",
+    "cycles = list(temporal_cycles(rolling_g=g,max_length=100,max_duration=36e5 * 24))\n",
     "\n",
     "print(f\"Execution Time: {(time.time() - s) * 1e3} ms\")\n",
     "\n"
@@ -149,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wassim-env",
+   "display_name": "raphtory",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
